# EduMatchAI

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
docs/: ml_system_design_doc.md
docs/data/: data_gb_resultv1.csv  data_it.csv  total.csv  trebovanyia_full_data.csv
src/: app.py  binary.py  configuration.py  metrics.py  pdf_parsing.py  shpad.py  utils.py  utils_2.ipynb
