[tool.black]
line-length = 88
target-version = ['py38']

[tool.poetry]
name = "edumatchai"
version = "0.1.0"
description = "ITMO 2024 ML System Design project Varapaev"
authors = ["ErikWarapaeff <warpaeff@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
